Fix annotations

Syntax matters.

https://bugzilla.gnome.org/show_bug.cgi?id=712747